# HTTP-Sverver

./: .gitignore  CMakeLists.txt  README.md
include/Datastrucutres/: ThreadPool.h
include/Error/: Error.h  Errorcodes.h
include/Logger/: Logger.h
include/http/: HTTPinitialization.h  HeaderFelder.h  NetworkManager.h  Parser.h  Request.h  Server.h  listener.h
src/: main.cpp
src/Datastrucutres/: ThreadSaveQueue.h
src/Error/: Error.h  Errorcodes.h
src/Listener/: ListenerCore.cpp  NetworkManager.cpp  NetworkManager.h  NetworkManagerCore.cpp  listener.cpp  listener.h
src/Log/: Logger.h
src/Parser/: Parser.cpp  ParserHelper.cpp  RequestSplitter.cpp  Seperator.cpp  Validator.cpp
src/Server/: HTTPinitialization.cpp  HTTPinitialization.h  Queues.h  Request.h  Server.cpp  Server.h  ThreadPool.cpp
tests/: CMakeLists.txt  ListenerCoreTest.cpp  Listener_test.cpp  NetworkManager.cpp  NetworkManagerCoreTest.cpp  NetworkManagerTest.cpp  ParserHelperTest.cpp  main_test.cpp
tests/mocks/: ListenerMock.h  MOCKListenerCore.h  MOCKNetworkManagerCore.h  SteamNetworkingSocketsAdapterMock.h  Test_Constants.h
